--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -292,7 +292,7 @@
 					var li = document.createElement('li');
 					li.className = 'mui-table-view-cell mui-media';
 					li.innerHTML =
-						'<img class="mui-media-object mui-pull-left" src="' + datasource[i].uimg + '">' +
+						'<img class="mui-media-object mui-pull-left" src="' + updateHeadImg(datasource[i].uimg,2) + '">' +
 						'<div class="mui-media-body">' +
 						datasource[i].unick + '<font style="color:gray"> 回答数:<span style="color:red">' + datasource[i].AnswerNum + '</span>' +
 						'</font><p class="mui-ellipsis">' + datasource[i].UserNote + '</p></div>' +
