--- a/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet">
+		<link href="../../css/qiuzhi/attention-persons.css" rel="stylesheet" />
 		</head>
 
 	<body>
@@ -14,10 +15,21 @@
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">关注他的人</h1>
 		</header>
+		<div class="mui-content mui-scroll-wrapper">
+		    <div class="mui-scroll">
+		        <!--这里放置真实显示的DOM内容-->
+		        <ul id="list-container" class="mui-table-view">
+		                
+		        </ul>
+		    </div>
+		</div>
+		
 		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-		</script>
+		<script src="../../js/utils/h5fresh.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/publicQiuzhiProtocol.js"></script>
+		<script src="../../js/qiuzhi/attentionPersons.js"></script>
 	</body>
 
 </html>
