--- a/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-detail.html
@@ -117,6 +117,7 @@
 		}
 		var ExpertsInfo;
 		mui.plusReady(function() {
+			events.preload('AttentionPersons.html',10);
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			ExpertsInfo = main.data; //接收页面传入参数值，传过来的专家model
 			console.log('expert-detail.html:' + JSON.stringify(ExpertsInfo));
@@ -146,6 +147,7 @@
 			})
 			events.addTap('IsFocusedMan', function() {
 				console.log('关注他的人');
+				events.fireToPageWithData('AttentionPersons.html','expertInfo',ExpertsInfo)
 			})
 			events.addTap('focusBtn', function() {
 				console.log('点击关注');
